# RustSandbox

./: .gitignore.txt  Cargo.toml
ActixTaskApi/: Cargo.toml
ActixTaskApi/migrations/: 0001_tasks_table.sql
ActixTaskApi/src/: main.rs
ActixTaskApi/src/controllers/: task_controller.rs
ActixTaskApi/src/database/: db.rs
ActixTaskApi/src/model/: task.rs
ActixTaskApi/src/repositories/: task_repository.rs
Examples/src/: main.rs  types.rs  vars.rs
GcRustVsCS/src/CS/compute_average_income/: Program.cs
HelloAzureFunction/src/: .gitignore  Cargo.toml  host.json
HelloAzureFunction/src/functions/: timer.rs
HelloFunction/: Cargo.toml
HelloFunction/src/functions/: mod.rs
HuffmanEncoding/: Cargo.toml  README.md
HuffmanEncoding/src/: binary_tree.rs  file_reader.rs  huffman.rs  main.rs  mod.rs  tree_node.rs
ParallelFibonacci/: Cargo.toml
ParallelFibonacci/src/: main.rs
PrimeNumbersRust/: README.md
PrimeNumbersRust/prime_number_rust/: Cargo.toml
PrimeNumbersRust/prime_number_rust/src/: main.rs
TokioAzureFunction/src/: main.rs
TokioGroceriesApi/: Cargo.toml
TokioGroceriesApi/src/: main.rs
TokioMemoryTestApi/: Cargo.toml
TokioMemoryTestApi/src/: main.rs
WebServer/: Cargo.toml
WebServer/src/: main.rs
src/: print.rs  types.rs  vars.rs
