[package]
name = "ActixWebApi"
version = "0.1.0"
authors = ["Fabricio <fabriciosperafico@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = { version = "^0.8", features = ["v4"] }
serde = { version = "^1", features = ["derive"] }
env_logger = "0.8"
log = "^0.4"
derive_more = "^0.99"
sqlx = { version = "0.5", features = ["postgres", "runtime-actix-rustls"]}
chrono = "0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }