[package]
name = "src"
version = "0.1.0"
authors = ["Fabricio <fabriciosperafico@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
actix-web = "3"
serde = "1"
env_logger = "0.8.2"
serde_json = "1.0.61"
mime = "0.3.16"
chrono = { version = "0.4.19", features = ["serde"] }

[[bin]]
name = "src"
path = "main.rs"
